--- a/Final-Website/FinalWebsite2.html
+++ b/Final-Website/FinalWebsite2.html
@@ -3,7 +3,7 @@
     <head> 
         
         <link rel="stylesheet" type="text/css" href="CSS/FinalWebsite.css">
-        <link rel="stylesheet" type="text/css" href="loading-bar.css"/>
+        <link rel="stylesheet" type="text/css" href="CSS/loading-bar.css"/>
         <script type="text/javascript" src="loading-bar.js"></script>
     </head> 
     <body>
