Minor last changes

--- a/Final-Website/FinalWebsite.html
+++ b/Final-Website/FinalWebsite.html
@@ -8,6 +8,7 @@
     </head> 
     <body>
         <div class='parent'>
+            <h1>Azzistant</h1>
 
             Hello Iann, we will be your helpful assistant. By pressing enter you authorize us to search for the information necessary to help you.
             <button class="buttons" onclick="window.location.href='FinalWebsite2.html'" style="vertical-align:middle"><span> Allow Access to Information</span></button>
