--- a/Final-Website/FinalWebsite3.html
+++ b/Final-Website/FinalWebsite3.html
@@ -37,7 +37,7 @@
             <p>You haven’t been to the grocery store in the last week. <p></p> I ordered delivery for the same things you bought last time.</p>
         </div>
             <div class="card"  id="text-shadow">
-                <h1>Self</h1>
+                <h1 id=highlight4>Self</h1>
                 <p>I see that you haven’t been to the gym in 4 months, it is recommended that you exercise regularly so I have signed up for a membership to the gym closest to you and added it to your schedule. You’ll start by going twice a week.
                 </p>
             </div>
@@ -71,7 +71,7 @@
         <h1>References</h1>  
         <div id="links">
 
-          <p><a href="https://www.equinox.com/clubs/new-york/downtown/soho" target="_blank" ></a></p>
+          https://www.equinox.com/clubs/new-york/downtown/soho" 
             <p> </p>
             https://www.mountsinai.org/locations/union-square
             <p></p>
