--- a/Azzistant/Loading.html
+++ b/Azzistant/Loading.html
@@ -11,7 +11,7 @@
             <h1> 
                 Loading your information…
                 <p></p>
-                <button class="buttons" onclick="window.location.href='FinalWebsite3.html'" style="vertical-align:middle"><span>Enter </span></button>
+                <button class="buttons" onclick="window.location.href='Information.html'" style="vertical-align:middle"><span>Enter </span></button>
         </h1>
         </div>
 
