--- a/Azzistant/Intro.html
+++ b/Azzistant/Intro.html
@@ -11,7 +11,7 @@
             <h1>Azzistant</h1>
 
             Hello Iann, we will be your helpful assistant. By pressing enter you authorize us to search for the information necessary to help you.
-            <button class="buttons" onclick="window.location.href='FinalWebsite2.html'" style="vertical-align:middle"><span> Allow Access to Information</span></button>
+            <button class="buttons" onclick="window.location.href='Loading.html'" style="vertical-align:middle"><span> Allow Access to Information</span></button>
            
 
         </div>
